# Dafer

./: CMakeLists.txt
Src/: Geometry.f90  Geometry.f90~  Init_problem.f90  Init_problem.f90~  Main.f90  Main.f90~  Makefile  Models.f90  Models.f90~  Post_pro.f90  Post_pro.f90~  Space_integration.f90  Space_integration.f90~  Time_integration.f90  Time_integration.f90~  plot_3rd_LW_limit.plt  test_gradient.f90  test_gradient.f90~
Src/Algebra/: Lin_Algebra.f90  Lin_Algebra.f90~
Src/Elements/: Element_Class.f90  Element_Class.f90~  Face_Class.f90  Face_Class.f90~  Quadrangle_Class.f90  Quadrangle_Class.f90~  Segment_Class.f90  Segment_Class.f90~  Triangle_Class.f90  Triangle_Class.f90~
Src/Quadrature/: Quadrature_rules.f90
Src/Schemes/: Gradient_Reconstruction.f90  Gradient_Reconstruction.f90~  LDA_method.f90  LDA_method.f90~  LLxFS_method.f90  LLxFS_method.f90~  LW_method.f90  LW_method.f90~  Num_Scheme.f90
