cmake_minimum_required (VERSION 2.6)
project (RD_Sca Fortran C)

message("PROJECT_BINARY_DIR = ${PROJECT_BINARY_DIR}")

SET(FIND_PETSC /home/dante/CODE/FPETSc/jedbrown-cmake-modules-f103d9f)

SET(EXECUTABLE_OUTPUT_PATH ../build)

SET(ELEMENT_FILES
  Src/Elements/Element_Class.f90
  Src/Elements/Face_Class.f90
  Src/Elements/Segment_Class.f90
  Src/Elements/Triangle_Class.f90
  Src/Elements/Quadrangle_Class.f90
)

SET(ALGEBRA_FILES
  Src/Algebra/Lin_Algebra.f90
)

SET(QUADRATURE_FILES
  Src/Quadrature/Quadrature_rules.f90
)

SET(SCHEMES_FILES
  Src/Schemes/Num_Scheme.f90
  Src/Schemes/LLxFS_method.f90
  Src/Schemes/LDA_method.f90
  Src/Schemes/LW_method.f90
  Src/Schemes/Gradient_Reconstruction.f90
)

SET(MAIN_FILES 
  Src/Init_problem.f90
  Src/Models.f90
  Src/Geometry.f90
  Src/Time_integration.f90
  Src/Space_integration.f90
  Src/Main.f90
  Src/Post_pro.f90
)

SET(SOURCES
  ${ELEMENT_FILES}
  ${ALGEBRA_FILES}
  ${QUADRATURE_FILES}
  ${SCHEMES_FILES}
  ${MAIN_FILES}
#  Src/test_gradient.f90
)

SET(CMAKE_MODULE_PATH ${FIND_PETSC} )
FIND_PACKAGE(PETSc REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)

SET(FORTRAN_PREPROCESS_FLAG -I${PETSC_INCLUDE_DIR})
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -I${PETSC_INCLUDE_CONF}")
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -fpp")
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -r8")
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -O5")
SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -warn all")

# Debug options
#SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -C")
#SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -check uninit")
#SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -ftrapuv")
#SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -fpe0 ")
#SET(FORTRAN_PREPROCESS_FLAG "${FORTRAN_PREPROCESS_FLAG} -check noarg_temp_create")

ADD_EXECUTABLE(solver.exe ${SOURCES})


SET_TARGET_PROPERTIES(solver.exe  PROPERTIES COMPILE_FLAGS ${FORTRAN_PREPROCESS_FLAG} )
TARGET_LINK_LIBRARIES(solver.exe ${PETSC_LIBRARIES})